# My_MLIR_Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
13-pass_manager/: CMakeLists.txt
13-pass_manager/include/Conversion/: CMakeLists.txt  Passes.h
13-pass_manager/include/Conversion/DreamStarToLinalg/: DreamStarToLinalg.h
13-pass_manager/include/Dialect/DreamStar/IR/: DreamStarAttrs.td  DreamStarOps.td
13-pass_manager/include/Dialect/DreamStar/Transforms/: CMakeLists.txt  Passes.td
13-pass_manager/include/Pipelines/: Pipelines.h
13-pass_manager/src/: CMakeLists.txt
13-pass_manager/src/Conversion/DreamStarToLinalg/: CMakeLists.txt  DreamStarToLinalg.cpp  DreamStarToLinalgPass.cpp
13-pass_manager/src/Dialect/DreamStar/IR/: DreamStarOps.cpp
13-pass_manager/src/Dialect/DreamStar/Transforms/: ApplyDistributeTransform.cpp  MarkDistributeParallelParameters.cpp
13-pass_manager/src/Pipelines/: CMakeLists.txt  DreamStarBasicPipeline.cpp
13-pass_manager/src/Tools/: CMakeLists.txt
13-pass_manager/src/Tools/DS-opt/: CMakeLists.txt  DS-opt.cpp
13-pass_manager/test/: CMakeLists.txt  lit.site.cfg.py.in  softmax.mlir
13-pass_manager/test/Conversion/: dream_star_to_linalg.mlir
13-pass_manager/test/Conversion/DreamStar/: apply-distribute-transform.mlir  mark-distribute-parallel-parameters.mlir
3-define_type/: CMakeLists.txt  main.cpp
3-define_type/include/Dialect/DreamStar/IR/: CMakeLists.txt  DreamStarDialect.td  DreamStarTypes.td
3-define_type/src/Dialect/DreamStar/IR/: CMakeLists.txt  DreamStarDialect.cpp  DreamStarTypes.cpp
7-ir_struct/: main.cpp  (+1 more)
(+97 files in other folders)
